# davey

./: .gitignore  .gitmodules  .npmignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  davey.wasi-browser.js  davey.wasi.cjs  flake.nix  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml
aes-gcm/: README.md
aes-gcm/src/: lib.rs
benchmark/: bench.ts
benchmark/libdave/: README.md
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
scripts/: changelog.mts
src/: arrayTree.ts  cryptor.rs  displayable_code.rs  errors.rs  fingerprint.rs  keySchedule.ts  lib.rs  ratchetTree.ts  secretTree.ts  session.rs  session.ts  state.ts
src/cryptor/: aead_cipher.rs  codec_utils.rs  cryptor_manager.rs  decryptor.rs  encryptor.rs  frame_processors.rs  hash_ratchet.rs  leb128.rs  mlspp_crypto.rs  mod.rs
src/util/: ciphersuite.ts  constants.ts  decoders.ts  index.ts  resolver.ts  serialize.ts  serializers.ts  signing.ts  structs.ts  types.ts
test/: generateDisplayableCode.test.ts  generateKeyFingerprint.test.ts  generateP256Keypair.test.ts  generatePairwiseFingerprint.test.ts  generateSigningKeys.test.mts  generateSigningKeys.test.ts  session.test.mts  session.test.ts  signLabel.ts  tsconfig.json  verifyWithLabel.ts  version.test.ts
