[package]
edition = "2021"
name = "snazzah_davey"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
env_logger = "0.11.6"
log = "0.4.26"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "compat-mode"] }
napi-derive = "2.12.2"
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
p256 = { version = "0.13" }
rand = "0.8"
scrypt = { version = "0.11.0", default-features = false }

[patch.crates-io]
openmls = { path = "./openmls/openmls" }
openmls_basic_credential = { path = "./openmls/basic_credential" }
openmls_rust_crypto = { path = "./openmls/openmls_rust_crypto" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
