[package]
edition = "2024"
name = "davey"
version = "0.1.0"
authors = ["Snazzah <me@snazzah.com>", "Aubrey Taylor <aubrey@hall.ly>"]

[dependencies]
openmls = { git = "https://github.com/openmls/openmls.git", rev = "c4315699f7ce81c0d5a496c776c23794b4a881d1" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", rev = "c4315699f7ce81c0d5a496c776c23794b4a881d1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", rev = "c4315699f7ce81c0d5a496c776c23794b4a881d1" }
tracing = "0.1.41"
thiserror = "2.0.12"
# Crypto utils
aes-gcm = "0.10.3"
p256 = { version = "0.13" }
rand = "0.8"
sha2 = { version = "0.10" }
hmac = { version = "0.12" }
scrypt = { version = "0.11.0", default-features = false }
num-derive = "0.4.2"
num-traits = "0.2.19"

[patch.crates-io]
aes-gcm = { path = "./aes-gcm" }
